Modified editor area to remove excess margin to the right. Added isVisible method to prevent realigning on each step.

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -126,6 +126,10 @@ html[dir="rtl"] .editor-mount {
   height: 100%;
 }
 
+.CodeMirror-scroll {
+  margin-right: 0px;
+}
+
 .editor-wrapper .editor-mount {
   width: 100%;
   background-color: var(--theme-body-background);
